<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.izis.yzext.PathView
        android:id="@+id/pathView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/float_id"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginBottom="8dp"
        android:background="@mipmap/xuanqu"
        android:text="@string/xuanqu"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:background="@mipmap/toggle_bg"
        android:textColor="@color/white"
        android:textOff="@string/start_service"
        android:textOn="@string/close_service"
        app:layout_constraintBottom_toTopOf="@+id/btnConnect"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/connect_board"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toggleButton" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@mipmap/exit_bg"
        android:text="@string/exit"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/toggleButton"
        app:layout_constraintTop_toTopOf="@+id/toggleButton" />

    <Button
        android:id="@+id/btnFindRect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/select_auto"
        app:layout_constraintStart_toEndOf="@+id/btnConnect"
        app:layout_constraintTop_toTopOf="@+id/btnConnect" />

</android.support.constraint.ConstraintLayout>