<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    android:theme="@style/AppTheme"
    tools:context="com.izis.yzext.ServiceActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/game_setting"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chess_size"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup3" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/rb_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/size_19"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/size_13"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/size_9"
            android:textColor="@color/black" />
    </RadioGroup>

    <!--<TextView-->
        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="32dp"-->
        <!--android:text="对局类型："-->
        <!--android:textColor="@color/black"-->
        <!--app:layout_constraintStart_toStartOf="@+id/textView"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <!--<RadioGroup-->
        <!--android:id="@+id/radioGroup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintStart_toStartOf="@+id/radioGroup3"-->
        <!--app:layout_constraintTop_toTopOf="@+id/textView2">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_start"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="无子"-->
            <!--android:textColor="@color/black" />-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_middle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="有子"-->
            <!--android:textColor="@color/black" />-->
    <!--</RadioGroup>-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_color"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup4"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/radioGroup4" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3">

        <RadioButton
            android:id="@+id/rb_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/game_black"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/rb_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/game_white"
            android:textColor="@color/black" />
    </RadioGroup>

    <!--<TextView-->
        <!--android:id="@+id/textView4"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="32dp"-->
        <!--android:text="落子颜色："-->
        <!--android:textColor="@color/black"-->
        <!--app:layout_constraintStart_toStartOf="@+id/textView3"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/textView3" />-->

    <!--<RadioGroup-->
        <!--android:id="@+id/radioGroup2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal"-->
        <!--app:layout_constraintStart_toStartOf="@+id/radioGroup4"-->
        <!--app:layout_constraintTop_toTopOf="@+id/textView4">-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_black2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="黑方"-->
            <!--android:textColor="@color/black" />-->

        <!--<RadioButton-->
            <!--android:id="@+id/rb_white2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="16dp"-->
            <!--android:layout_weight="1"-->
            <!--android:text="白方"-->
            <!--android:textColor="@color/black" />-->
    <!--</RadioGroup>-->

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hint"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />
</android.support.constraint.ConstraintLayout>
